fix: aligning in shopping cart

--- a/src/mainPage/containers/menu/menu.module.css
+++ b/src/mainPage/containers/menu/menu.module.css
@@ -139,6 +139,8 @@
 
 .showCart li {
     list-style-type: none;
+    text-align: left;
+    padding-left: 40%;
 }
 
 .shoppingCartTitle {
